--- a/src/Components/Experience/Experience.scss
+++ b/src/Components/Experience/Experience.scss
@@ -7,11 +7,18 @@
         padding: 2rem 0;
         
         .title {
-            text-align: center;
+            display: flex;
+            justify-content: center;
             padding-left: 4%;
-            background-color: $color_prim;
-            color: $white;
-            padding: 1.5rem;
+            color: $color_prim;
+            h2 {
+                text-transform: uppercase;
+                font-size: 1.8em;
+                align-self: center;
+                width: fit-content;
+                padding: .3em 2em;
+                border-bottom: solid 2px grey;
+            }
         }
 
         .content {
@@ -21,7 +28,8 @@
             padding-left: 4%;
 
             .whats-included {
-                font-weight: 500;
+                font-weight: 600;
+                font-size: 1.5em;
             }
 
             .ul-wrapper {
@@ -55,7 +63,20 @@
                         }
                     }
                     .bottom {
-                        font-weight: 600;
+                        .cont-top {
+                            font-weight: 800;
+                            font-family: $font_sec;
+                        }
+                        .cont-bot {
+                            font-family: $font_sec;
+                            font-weight: 500;
+                            text-align: center;
+                        }
+
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
                     }
                 }
             }
