--- a/src/Components/HowItWorks/HWorks.scss
+++ b/src/Components/HowItWorks/HWorks.scss
@@ -30,19 +30,24 @@
                 align-items: center;
 
                 .item {
+                    margin: 0 .2em;
+                    width: 28%;
                     display: flex;
                     list-style: none;
                     flex-direction: column;
 
                     .top {
-                        text-align: center;
-                        width: 35px;
-                        height: 35px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 45px;
+                        height: 45px;
                         padding: .5em;
                         background-color: $white;
                         color: #0b0b0b;
                         border-radius: 50%;
                         font-weight: 900;
+                        font-size: 1.5em;
                     }
                     .item-title {
                         text-align: center;
@@ -51,6 +56,7 @@
                     }
                     .bottom {
                         .content {
+                            width: 80%;
                             font-size: 18px;
                         }
                     }
@@ -58,7 +64,7 @@
             }
         }
         .booking {
-            color: #0b0b0b;
+            color: white;
         }
     }
 
