--- a/src/Components/Faqs/Faqs.scss
+++ b/src/Components/Faqs/Faqs.scss
@@ -30,13 +30,13 @@
             .questions-wrapper {
                 .questions {
                     margin: 0 auto;
-                    background-color: rgb(247, 157, 157);
                     max-width: 1000px;
 
                     .item {
                         display: flex;
-                        flex-direction: column;
                         margin: .6rem 0;
+                        flex-direction: column;
+                        border: solid 1px grey;
                         background-color: $color_prim;
                         
                         .title {
@@ -44,13 +44,15 @@
                             display: flex;
                             flex-direction: row;
                             justify-content: space-between;
-                            color: $white;
+                            color: $black;
+                            
                             cursor: pointer;
                             
                         }
 
                         .answer {
-                            display: none;
+                            padding: 1.5em;
+                            background-color: white;
                         }
                     }
                 }
