--- a/src/Components/Commitments/commitments.scss
+++ b/src/Components/Commitments/commitments.scss
@@ -33,7 +33,8 @@
                     padding: 2em .5em;
                     flex-direction: column;
                     background-color: $white;
-                    border: solid 7px $color_ter;
+//                    border: solid 7px $color_ter;
+                    box-shadow: $Main_shadow;
                     border-radius: $border_radius_prim;
                     
                     .item-top {
@@ -48,8 +49,8 @@
                     }
                     .item-content {
                         text-align: center;
-                        font-size: 1.2em;
-                        font-weight: 500;
+                        font-size: 1.1em;
+                        font-weight: 300;
                         font-family: $font_sec;
                     }
                 }
@@ -57,5 +58,5 @@
         }
     }
 
-    background-color: #D25B35;
+//    background-color: #D25B35;
 }
